[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/RoomInfoPanel.gd" type="Script" id=1]

[node name="RoomInfoPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 593.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_left = 164.0
margin_top = 286.0
margin_right = 243.0
margin_bottom = 300.0
text = "Room Name"

[node name="MonstersLabel" type="Label" parent="HBoxContainer"]
margin_left = 255.0
margin_top = 286.0
margin_right = 389.0
margin_bottom = 300.0
text = "Monsters Played: X/Y"

[node name="ItemsLabel" type="Label" parent="HBoxContainer"]
margin_left = 401.0
margin_top = 286.0
margin_right = 513.0
margin_bottom = 300.0
text = "Items Played: X/Y"

[node name="StableTurnsLabel" type="Label" parent="HBoxContainer"]
margin_left = 525.0
margin_top = 286.0
margin_right = 621.0
margin_bottom = 300.0
text = "Stable Turns: N"
